--- a/educa/students/templates/students/course/detail.html
+++ b/educa/students/templates/students/course/detail.html
@@ -10,6 +10,11 @@
     {{ module.title }}
 </h1>
 <div class="contents">
+    <h3>
+        <a href="{% url 'chat:course_chat_room' object.id %}">
+          Course chat room
+        </a>
+    </h3>
     <h3>Modules</h3>
     <ul id="modules">
         {% for m in object.modules.all %}
